--- a/vignettes/diagnostics.Rmd
+++ b/vignettes/diagnostics.Rmd
@@ -137,17 +137,7 @@ functional_form_age(Surv(time, status) ~ age, prevsim_r, df=4, plot_fit=T)
 
 # Prevalence estimates
 
-As a reminder, prevalence is estimated using incidence and survival data from *n* years. However, registry data (and thus known incidence and survival) data may only be known for *r* years, where *r* <= *n*. If *r* < *n*, the remaining *n*-*r* years of incidence and survival are simulated using Monte Carlo techniques.
-
-## Counts
-
-In the first instance, prevalence can be estimated by counting from the registry data. It is imperative that the number of incident cases is complete for estimating prevalence, and that follow-up data for all cases is complete at least until after the index date. In the case of the provided *prevsim* data set the last recorded incident case date and the last date of follow-up are different, as is typically the case in registry data sets where incidence and follow-up data are provided by different sources.
-
-## Simulation
-
-Prevalence is estimated using simulation by calling `prevalence()`. `index_date` and `num_reg_years` perform the same role as in `prevalence_counted`: specifying the date at which to estimate point prevalence, and allowing for the specification of the number of years of registry data to use. `num_years_to_estimate` corresponds to the required number of years preceding the index date that contribute incident cases. If any values are larger than the number of complete years of registry data available before `index_date`, then the remainder of years have their incidence and survival characteristics simulated. By passing a vector to `num_years_to_estimate`, multiple estimates of prevalence at the index date can be calculated with their own confidence intervals. The `population_size` argument is used to provide relative rates estimates (per one hundred thousand in this case although this can be specified by the `proportion` argument). If this argument is not provided then just the absolute prevalence estimates are returned.
-
-NB: all follow-up data for the available incident cases is still used in survival modelling.
+As a reminder, prevalence is estimated using incidence and survival data from *n* years. However, registry data (and thus known incidence and survival) data may only be known for *r* years, where *r* <= *n*. If *r* < *n*, the remaining *n*-*r* years of incidence and survival are simulated using Monte Carlo techniques. If the incidence and survival models are well specified then the prevalence estimates should be reliable, however, it is still useful to check the fit before drawing any conclusions from the results. 
 
 ```{r prevalencetotal, error = TRUE}
 prevalence_total <- prevalence(index='2013-01-30', 
@@ -160,7 +150,11 @@ prevalence_total <- prevalence(index='2013-01-30',
                                death_column = 'eventdate')
 ```
 
-## Inspecting bootstrapped survival modelling
+## Diagnosing incidence models
+
+We do not provide any functions for diagnosing the incidence models fitted to the bootstrap data, however, all the objects are available in the `inc_models` attribute of the returned `prevalence` object and can be used to check for any errors in fitting.
+
+## Diagnosing survival models
 
 To inspect the distribution of the bootstrapped survival models [see @crouch2014determining for details], a `survfit.prev` object can be constructed using the usual `survfit` call, accepting a data frame of new data (with identical column names to those found in the original data set). In the example below, survival probability is estimated for a 60 year old male:
 
@@ -176,7 +170,7 @@ The `summary.survfit.prev` method provides *N*-year survival probabilities, with
 summary(prevsurv, years=c(1, 3, 5, 10))
 ```
 
-Plotting the `survfit.prev` object displays the survival curve of a Weibull model using the original data set (orange), along with 95% confidence intervals derived using the bootstrapped models shaded in light grey, while outlier curves are individually plotted. Outliers are defined as those survival curves where at least `pct_show` proportion of their point predictions lie outside the 95% confidence interval.
+Plotting the `survfit.prev` object displays the survival curve of a Weibull model using the original data set (orange), along with 95% confidence intervals derived using the bootstrapped models shaded in light grey, while outlier curves are individually plotted. Outliers are defined as those survival curves where at least `pct_show` proportion of their point predictions lie outside the 95% confidence interval. This plot is useful to assess the variability of the survival models. Further manual inspection can be carried out by looking at the objects themselves, saved in the `surv_models` attribute of the `prevalence` object.
 
 ```{r, fig.width=7, fig.height=4}
 plot(prevsurv, pct_show=0.90)
@@ -184,7 +178,7 @@ plot(prevsurv, pct_show=0.90)
 
 ## Comparison between simulated and counted prevalence
 
-As a test of whether the model is predicting reasonable values of prevalence, we can use the fact that we can directly measure the discrepancy between the predicted and actual prevalence for the available registry years. This difference can be formally tested using a chi-square test; the resulting p-value resulting is returned as an attribute of a `prevalence` object, called `pval`.
+As a test of whether the model is predicting reasonable values of prevalence, we can use the fact that we can directly measure the discrepancy between the predicted and actual prevalence for the available registry years. This difference can be formally tested with an exact Poisson test of the counted prevalence from both the simulated estimate and the known registry value; the resulting p-value resulting is returned as an attribute of a `prevalence` object, called `pval`.
 
 ```{r}
 prevalence_total$pval
@@ -196,6 +190,14 @@ This can also be calculated manually with the `test_prevalence_fit` function.
 
 ```{r test, error = TRUE}
 test_prevalence_fit(prevalence_total)
+```
+
+## Simulated population
+
+The `simulated` attribute of the `prevalence` object holds a `data.table` with the incident population from every simulation, along with derived fields indicating whether they contributed to prevalence at the index date of any years of interest. It can be used as an overall check of the appropriateness of the generated incidence population, as well as identifying any discrepencies in the survival modelling.
+
+```{r}
+knitr::kable(prevalence_total$simulated)
 ```
 
 
