--- a/vignettes/diagnostics.Rmd
+++ b/vignettes/diagnostics.Rmd
@@ -66,8 +66,7 @@ plot(inc)
 Another function used to describe the incident cases is `incidence_age_distribution`, which simply plots the distribution of incident cases by age.
 
 ```{r incidenceage, fig.width = 7, fig.height = 4, error = TRUE}
-prevsim_r <- prevsim[prevsim$entrydate >= "2004-01-30", ]
-incidence_age_distribution(prevsim_r$age)
+incidence_age_distribution(prevsim$age)
 ```
 
 
@@ -78,14 +77,14 @@ The second component to the prevalence estimation is the survival modelling proc
 First, it is always useful to plot the Kaplan-Meier estimator of the data, both as a whole and stratified by age to visually inspect for any inconsistencies:
 
 ```{r survivaldiag, fig.width = 7, fig.height = 4}
-km <- survfit(Surv(time, status) ~ 1, data=prevsim_r)
+km <- survfit(Surv(time, status) ~ 1, data=prevsim)
 plot(km, lwd=2, col="blue", main="Overall Survival", xlab="Days", 
      ylab="Survival probability")
 ```
 
 ```{r survivaldiag2, fig.width = 7, fig.height = 4}
 ages = c(55, 65, 75, 85, 100)
-km2 <- survfit(Surv(time, status) ~ cut(age, breaks=ages), data=prevsim_r)
+km2 <- survfit(Surv(time, status) ~ cut(age, breaks=ages), data=prevsim)
 plot(km2, lwd=2, col=1:length(ages), main="Survival stratified by age", xlab="Days", 
      ylab="Survival probability")
 legend("topright", legend=substring(names(km2$strata), 25, 32), lty = 1, 
@@ -102,9 +101,9 @@ registry_years <- determine_yearly_endpoints(date='2004-01-30',
                                              num_years=num_reg_years)
 sapply(seq(num_reg_years),
        function(i) lines(survfit(Surv(time, status) ~ 1, 
-                                 data=prevsim_r[prevsim_r$entrydate >= 
+                                 data=prevsim[prevsim$entrydate >= 
                                                           registry_years[i] & 
-                                                          prevsim_r$entrydate < 
+                                                          prevsim$entrydate < 
                                                           registry_years[i + 1], ]), 
                          mark.time = F, conf.int = F))
 ```
@@ -112,7 +111,7 @@ sapply(seq(num_reg_years),
 The effect of age on hazard can be visualised to determine if there are any non-proportional effects, by inspecting Schoenfeld residuals from a Cox model. This is easily done using the `cox.zph` function from the `survival` package. 
 
 ```{r survivaldiag3, fig.width = 7, fig.height = 4}
-cx <- coxph(Surv(time, status) ~ age, data=prevsim_r)
+cx <- coxph(Surv(time, status) ~ age, data=prevsim)
 cxp <- survfit(cx, 
                newdata=data.frame(age=sapply(seq(length(ages) - 1), 
                                              function(i) mean(c(ages[i], ages[i + 1]))))) 
@@ -132,7 +131,7 @@ cox.zph(cx)
 `functional_form_age()` is provided so that the user can further investigate if modelling the effect of age as linear is appropriate. This function fits a Cox model to the data with a restricted cubic spline with the specified degrees of freedom. The model is returned by the function as an `rms::cph object`, allowing the user to inspect the fit. The function can also plot relative hazard as a function of age with the `plot_fit` argument.
 
 ```{r ageform2, fig.width = 7, fig.height = 4, error = TRUE}
-functional_form_age(Surv(time, status) ~ age, prevsim_r, df=4, plot_fit=T)
+functional_form_age(Surv(time, status) ~ age, prevsim, df=4, plot_fit=T)
 ```
 
 # Prevalence estimates
@@ -197,7 +196,7 @@ test_prevalence_fit(prevalence_total)
 The `simulated` attribute of the `prevalence` object holds a `data.table` with the incident population from every simulation, along with derived fields indicating whether they contributed to prevalence at the index date of any years of interest. It can be used as an overall check of the appropriateness of the generated incidence population, as well as identifying any discrepencies in the survival modelling.
 
 ```{r}
-knitr::kable(prevalence_total$simulated)
+knitr::kable(head(prevalence_total$simulated))
 ```
 
 
