--- a/vignettes/user_guide.Rmd
+++ b/vignettes/user_guide.Rmd
@@ -130,7 +130,8 @@ prev_llog <- prevalence(index='2013-01-30',
                         inc_formula = entrydate ~ sex,
                         surv_model=llog,
                         population_size = 1e6,
-                        death_column = 'eventdate')
+                        death_column = 'eventdate',
+                        N_boot = 100)
 ```
 
 As can be seen, the prevalence estimates from different survival distributions can vary largely so it is important to use as accurate a model as possible. The [diagnostics vignette](diagnostics.html) discusses strategies on how to identify well-fitting models.
