--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
   - More distributions supported by survregmin
   - Parallelise main simulation loop
+  - Default incidence model handle multiple stratas
   - More rigorous stress testing
-  - Centre image in user guide
+
