Improved guards on predict_survival_probability

--- a/TODO
+++ b/TODO
@@ -2,4 +2,6 @@
   - Parallelise main simulation loop
   - Default incidence model handle multiple stratas
   - More rigorous stress testing
+  - Add in docs for generic methods for incidence and survival models
+  - Add Travis support
 
